# 02_habr_composing_normalization

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
benches/: Cargo.toml  README.md  rep2.txt  report.txt
benches/benches/: icu.rs  my.rs  v0.rs  v1.rs  v2.rs
benches/benches/group/: mod.rs
benches/src/: main.rs
composing/: Cargo.toml  README.md
composing/0_base/: Cargo.toml
composing/0_base/src/: codepoint.rs  data.rs  expansion.rs  lib.rs  macros.rs
composing/1_base/: Cargo.toml
composing/1_base/src/: composition.rs  data.rs  lib.rs  macros.rs
composing/1_opt/src/: data.rs  expansion.rs  hangul.rs  lib.rs  macros.rs
composing/2_opt/: Cargo.toml
composing/2_opt/src/: lib.rs  macros.rs
composing/src/: codepoint.rs  data.rs  lib.rs  utf8.rs
composing/src/codepoint/: decode.rs  mod.rs
composing/src/composition/: combine.rs  hangul.rs  mod.rs
composing/src/slice/: aligned.rs  iter.rs  mod.rs
data/: compositions.txt  nfc.rs.txt  nfc.stats.txt  nfc.txt  nfc.u32.rs.txt  nfd.rs.txt  nfd.stats.txt  nfd.txt  nfkc.rs.txt  nfkc.stats.txt  nfkc.txt  nfkc.u32.rs.txt  nfkd.rs.txt  nfkd.stats.txt  nfkd.txt
prepare/: Cargo.toml  README.md
prepare/src/: lib.rs  main.rs  pairs.rs
prepare/src/encode/: _combines.rs  _mod.rs  composition.rs  mod.rs
prepare/src/output/: format.rs  (+2 more)
prepare/tests/: data.rs  stats.rs  test.ipynb  test_data.rs
source/: Cargo.toml  README.md
source/examples/: 0_ccc.rs  0_pairs.rs  1_decompositions.rs  2_decomposition_ccc.rs  3_multiple_starters.rs  4_non_bmp.rs
source/src/: composition_exclusions.rs  lib.rs  normalization_tests.rs  quick_checks.rs  unicode.rs
source/tests/: composing.rs
test_data/texts/: arabic.txt  czech.txt  english.txt  french.txt  german.txt  greek.txt  hebrew.txt  hindi.txt  italian.txt  japanese.txt  korean.txt  persian.txt  polish.txt  portuguese.txt  russian.txt  serbian.txt  spanish.txt  thai.txt  turkish.txt  ukrainian.txt  vietnamese.txt
test_data/texts_decomposed/: arabic.txt  chinese.txt  czech.txt  dutch.txt  english.txt  french.txt  german.txt  greek.txt  hebrew.txt  italian.txt  japanese.txt  korean.txt  persian.txt  polish.txt  portuguese.txt  russian.txt  spanish.txt  turkish.txt  ukrainian.txt  vietnamese.txt
tests/: Cargo.toml  README.md
tests/src/: data.rs  icu.rs  lib.rs  ucd.rs
(+30 files in other folders)
