[package]
name = "unicode_normalization_example_benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"
icu_normalizer = "1.4.1"

unicode_composing_v0 = { path = "./../composing/0_base" }
# unicode_decomposing_v2 = { path = "./../decomposing/2_opt" }

[[bench]]
name = "v0"
path = "benches/v0.rs"
harness = false

# [[bench]]
# name = "v2"
# path = "benches/v2.rs"
# harness = false

[[bench]]
name = "icu"
path = "benches/icu.rs"
harness = false

[profile.bench]
opt-level = 3
